# slack-channel-event-notifications

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  function.tf  handler.py  pyproject.toml  template.yml
.github/workflows/: build-artifact.yml  build-main.yml  build-pull-request.yml  deploy.yml
