[project]
name = "slack-channel-event-notifications"
version = "0"
description = "Post a notification in Slack when a channel is created or modified"
authors = [
    {name = "Kristaps Berzinch",email = "kristapsberzinch@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "aws-lambda-powertools[tracer] (>=3.14.0,<4.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "handler.py" },
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
flake8-import-order = "^0.19.0"
mypy = "^1.16.0"
pylint = "^3.3.7"

